--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -10,7 +10,7 @@
 }
 
 .email-text-field-container {
-  width: 75%;
+  width: 40%;
 }
 
 .email-text-field {
@@ -81,5 +81,10 @@
 
   .line-drawing {
     width: 100%;
+  }
+
+  .email-text-field-container {
+    width: 100%;
+    margin-bottom: 5px;
   }
 }
