--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
         <ol class="pros">
           <li class="pro">Upload your game</li>
           <li class="pro">Share the link with your friends</li>
-          <li class="pro">Video chat, test variations, get computer analysis, and more.</li>
+          <li class="pro">Video chat, test variations, get computer analysis, and a lot more.</li>
           <li class="pro">All for free :)</li>
         </ol>
         </div>
