--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,7 @@
           <li class="pro">Upload your game</li>
           <li class="pro">Share the link with your friends</li>
           <li class="pro">Video chat, test variations, get computer analysis, and a lot more.</li>
-          <li class="pro">All for free :)</li>
+          <li class="pro">It's free.</li>
         </ol>
         </div>
 
