--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   <div class="notice">
     <i class="fa fa-bullhorn fa-2x horn"></i> <p class="notice-text"><%= notice %></p>
   </div>
+<% else %>
+  <div class="notice">
+    Hey SvN readers! Here is a splash page I threw together for those that were interested. If you didn't read my post on Basecamp's Signal vs Noise post, how the hell did you get here?
+  </div>
 <% end %>
 <%= yield %>
 
