--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,8 @@
           <li class="pro">Upload your game</li>
           <li class="pro">Share the link with your friends</li>
           <li class="pro">Video chat, test variations, get computer analysis, and a lot more.</li>
-          <li class="pro">It's free.</li>
+
+          <li class="pro">It's free <img alt="#$1" src="<%= asset_path("emoji/#{@emoji.image_filename}") %>" style="vertical-align:middle" width="50" height="50" /></li>
         </ol>
         </div>
 
