--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,9 @@
 <div class="container">
       <header class="codrops-header">
-        <h1>ChessExplained <span>Experience and learn the game of chess with anyone, at anytime, over the internet</span></h1>
+        <h1>
+          ChessExplained
+          <span>Experience and learn the game of chess with anyone, at anytime, over the internet</span>
+          </h1>
       </header>
       <div id="main" class="main">
         <figure>
