--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <% else %>
   <div class="notice">
     <p class="notice-text">
-      Hey SvN readers! Here is a splash page I threw together for those that were interested. If you didn't read my post on Basecamp's Signal vs Noise post, how the hell did you get here?
+      Hey SvN readers! Here is a splash page I threw together for those that were interested. If you didn't read my post on Basecamp's Signal vs Noise, how the hell did you get here?
     </p>
   </div>
 <% end %>
