--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 </head>
 <body>
 <% if notice %>
-  <div class="notice">
+  <div class="notice-welcome">
     <i class="fa fa-bullhorn fa-2x horn"></i> <p class="notice-text"><%= notice %></p>
   </div>
 <% else %>
