--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field email-text-field-container">
-    <%= f.text_field :email, placeholder: "bobbyfischer@gmail.com", autofocus:true, class: "email-text-field" %>
+    <%= f.email_field :email, placeholder: "bobbyfischer@gmail.com", autofocus:true, class: "email-text-field" %>
   </div>
   <div class="actions submit-container">
     <%= f.submit "Sign up", class: "submit-button" %>
