--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -74,6 +74,13 @@
   text-align: center;
 }
 
+.notice-welcome {
+  background-color: lightgreen  ;
+  margin: 0;
+  padding: 5px 20px;
+  text-align: center;
+}
+
 .notice-text {
   display: inline-block;
   margin-left: 20px;
