--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,6 +15,6 @@
     <%= f.email_field :email, placeholder: "bobbyfischer@gmail.com", autofocus:true, class: "email-text-field" %>
   </div>
   <div class="actions submit-container">
-    <%= f.submit "Sign up", class: "submit-button" %>
+    <%= f.submit "Join our mailing list", class: "submit-button" %>
   </div>
 <% end %>
