--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,7 +31,7 @@
         </div>
 
         <div class="beta-container">
-        <h3 class='beta-line'>ChessExplained is currently in private beta. Enter your email below to join the mailing list for its launch in 2 weeks! </h3>
+        <h3 class='beta-line'>ChessExplained is currently in private beta. Enter your email below to join the mailing list for its launch in a few weeks! </h3>
         <span class="tester-line">You can contact me on <%= link_to "twitter", "https://twitter.com/JackMallers", class: "twitter-link" %> if you are interested in being a beta tester.</span>
         </div>
         <div class="form-container">
